[Karthi] Completed the registration flow
